tests/errors/standard.x

export let hello_world: char* = "hello, world!\n";

export let number = 21;

fn add(x: int, y: int) -> int {
    return x + y;
}